모바일 작업

--- a/mobile/resources/css/gu.renew.contents.scss
+++ b/mobile/resources/css/gu.renew.contents.scss
@@ -1309,7 +1309,7 @@
 
 							input {
 								height: 28px;
-								padding: 0 8px
+								padding: 0 8px;
 								font-size: $fz12px;
 							}
 						}
