--- a/mobile/resources/css/gu.renew.layout.scss
+++ b/mobile/resources/css/gu.renew.layout.scss
@@ -20,11 +20,32 @@
 
 				&.util {
 					flex: none;
+					a{
+						display: none;
+						text-indent: 0;
+						color: #fff;
+						font-size: $fz11px;
+						letter-spacing: -0.075em;
+						line-height: 13px;
+
+						&:before{
+							display: inline-block;
+							content: '';
+							width: 24px;
+							height: 23px;
+							margin: 2px 5px 0 0;
+							vertical-align: top;
+						}
+
+						span{
+							display: inline-block;
+							vertical-align: top;
+						}
+					}
 				}
 
 				a {
 					@include bg_btn;
-					display: block;
 					float: left;
 					margin-left: 15px;
 
@@ -36,25 +57,29 @@
 						background-size: 24px 22px;
 					}
 
-					&.menu01 {
-						width: 24px;
-						height: 22px;
+					&.menu01:before {
 						background: url("/resources/images/gu.renew.common/btn_mobile_menu_01.png") no-repeat;
-						background-size: 24px 22px;
+						background-size: 24px 23px;
 					}
 
-					&.menu02 {
-						width: 24px;
-						height: 22px;
+					&.menu02:before {
 						background: url("/resources/images/gu.renew.common/btn_mobile_menu_02.png") no-repeat;
 						background-size: 24px 22px;
 					}
 
-					&.menu03 {
-						width: 24px;
-						height: 22px;
+					&.menu03:before {
 						background: url("/resources/images/gu.renew.common/btn_mobile_menu_03.png") no-repeat;
-						background-size: 24px 22px;
+						background-size: 24px 23px;
+					}
+
+					&.menu04:before {
+						background: url("/resources/images/gu.renew.common/btn_mobile_menu_04.png") no-repeat;
+						background-size: 24px 23px;
+					}
+
+					&.menu05:before {
+						background: url("/resources/images/gu.renew.common/btn_mobile_menu_05.png") no-repeat;
+						background-size: 24px 23px;
 					}
 				}
 			}
@@ -149,6 +174,17 @@
 	&.main {
 		padding-top: 129px;
 
+		.menu_area {
+			li {
+				a {
+					&.menu01,
+					&.menu02, 
+					&.menu04 {
+						display: block;
+					}
+				}
+			}
+		}
 		.content_area {
 			padding-top: 114px;
 		}
@@ -171,6 +207,18 @@
 
 			&.tab_open {
 				height: 179px;
+			}
+
+			.menu_area {
+				li {
+					a {
+						&.menu02,
+						&.menu03,
+						&.menu05 {
+							display: block;
+						}
+					}
+				}
 			}
 
 			.conner_left {
