컨설팅수정

--- a/mobile/resources/css/gu.renew.contents.scss
+++ b/mobile/resources/css/gu.renew.contents.scss
@@ -511,6 +511,12 @@
 			.name {
 				font-weight: 700;
 			}
+
+			.logo{
+				&:after{
+					display: none;
+				}
+			}
 		}
 		
 		.btn_contract_add{
