--- a/mobile/resources/css/gu.renew.common.scss
+++ b/mobile/resources/css/gu.renew.common.scss
@@ -462,7 +462,7 @@ button div, button:active div, button:before, button:focus div {
 	input {
 		width: 100%;
 		height: 33px;
-		padding: 0 0 0 18px;
+		padding: 0 30px 0 18px;
 		border: 0;
 		outline: none;
 		background: transparent;
@@ -543,6 +543,16 @@ button div, button:active div, button:before, button:focus div {
 				background-size: 15px auto;
 			}
 		}
+	}
+
+	.btn_del{
+		position: absolute;
+    top: 0;
+    right: 53px;
+    width: 33px;
+    height: 33px;
+    background: url(/resources/images/gu.renew.common/btn_del.png) no-repeat center center;
+    background-size: 20px auto;
 	}
 }
 
