팝업-권장금액보장군설정 클릭이벤트 추가

--- a/mobile/resources/css/gu.renew.contents.scss
+++ b/mobile/resources/css/gu.renew.contents.scss
@@ -1618,6 +1618,9 @@
 		content: "";
 		vertical-align: top;
 	}
+	&:active{
+		background: #eee;
+	}
 }
 
 .icon_all_select {
@@ -1631,6 +1634,15 @@
 		background-size: 100% auto;
 		content: "";
 		vertical-align: top;
+	}
+
+	&.checked{
+		color:#ff4858;
+		border: 1px solid #ff4858;
+		&:before {
+			background: url(/resources/images/gu.renew.common/icon_checked_red.png) no-repeat 0 0;
+			background-size: 100% auto;
+		}
 	}
 }
 
