--- a/web/resources/css/gu.renew.contents.scss
+++ b/web/resources/css/gu.renew.contents.scss
@@ -10,7 +10,7 @@
 	overflow: hidden;
 	clip: rect(0 0 0 0);
 }
-
+/* 주석 테스트 수정 20200102Duke*/
 /* 테이블형 리스트 */
 .list_table_type {
 	.content_scroll {
